// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CapacityRulesForm /> renders create form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="CapacityRulesFormFieldName"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
    placeholder="Name"
  />
</form>
`;

exports[`<CapacityRulesForm /> renders update form 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    data-automation="CapacityRulesFormFieldName"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
    placeholder="Name"
  />
  <SelectField
    data-automation="CapacityRulesFormFieldActiveVersion"
    disabled={false}
    label="Version"
    name="activeVersion"
    options={
      Array [
        Object {
          "label": "undefined - undefined",
          "value": undefined,
        },
        Object {
          "label": "undefined - undefined",
          "value": undefined,
        },
      ]
    }
    placeholder="Select a version"
    required={false}
  />
</form>
`;
